--- a/ProblemSet3/quantHW3.ipynb
+++ b/ProblemSet3/quantHW3.ipynb
@@ -1464,7 +1464,7 @@
       "source": [
         "Conclusion for part (b): We fail to reject the hypothesis that the proxy for the market portfolio is mean variance efficient because t-stat for both gamma coefficients are less than the critical value. \n",
         "\n",
-        "Conclusion for part (c): Both gamma coefficients are the same from both method, but with different SE.  By comparing the SE in (b) and OLS regression from (c), we determine that the cross-sectional regression has less SE and therefore is superior method.\n",
+        "Conclusion for part (c): Both gamma coefficients are the same from both methods, but with different SE.  By comparing the SE in (b) and OLS regression from (c), we determine that the cross-sectional regression has less SE and therefore is superior method.\n",
         "\n",
         "Conclusion for part (f): Given the table of t-stat of model coefficients, at least one of them is less than the t-critical value. Therefore, we fail to reject the null hypotehsis that the proxy for the market portfolio is mean-variance efficient. "
       ]
