--- a/ProblemSet4/quantHW4.ipynb
+++ b/ProblemSet4/quantHW4.ipynb
@@ -17,6 +17,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "SiJs72X4YmL6"
+      },
+      "source": [
+        "# MGT 595 Problem Set 4\n",
+        "# Author: Denglin Wu, Joanna Chen\n",
+        "# September 27, 2020\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "13aHm0cZ8q3-"
       },
       "source": [
