--- a/ProblemSet5/quantHW5.ipynb
+++ b/ProblemSet5/quantHW5.ipynb
@@ -15,6 +15,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oo4u15sDFJiw"
+      },
+      "source": [
+        "# MGT 595 Problem Set 5\n",
+        "# Author: Denglin Wu, Joanna Chen\n",
+        "# October 6, 2020"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xu3nbRKajXOB",
