--- a/ProblemSet6/quantHW6.ipynb
+++ b/ProblemSet6/quantHW6.ipynb
@@ -17,6 +17,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "x33K0bvYKuAr"
+      },
+      "source": [
+        "# MGT 595 Problem Set 6\n",
+        "# Author: Denglin Wu, Joanna Chen\n",
+        "# October 13, 2020"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "quyRIIL82Nys"
       },
       "source": [
@@ -462,17 +473,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FdLT1R5RW92R"
-      },
-      "source": [
-        "#factors.iloc[12:-4, :]"
-      ],
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "yhEFj-BH3_zO",
         "outputId": "572b6ebe-b44b-4349-ca84-045c0034106c",
         "colab": {
@@ -867,6 +867,7 @@
         }
       },
       "source": [
+        "# 3-factor model for commodities\n",
         "comm_mom_4factors = factors.iloc[523:, :]\n",
         "x = sm.add_constant(comm_mom_4factors[['Mkt-RF', 'SMB', 'HML', 'UMD']])\n",
         "mod11 = sm.OLS(comm_mom_pf[:-1], x).fit()\n",
@@ -999,6 +1000,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "7Ef9yggHOuCV"
+      },
+      "source": [
+        "This augmented factor model captures the 12-month, 1-month industry momentum returns slightly better than the non-augmented one by comparing $R^2$, but it is still at an very low level."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Z6vaRh3k5JI8"
       },
       "source": [
@@ -1031,6 +1041,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i2ODqHyXPcbe"
+      },
+      "source": [
+        "Similary, this augmented factor model captures the 12-month, 1-month COM momentum returns slightly better than the non-augmented one by comparing $R^2$, but it is still at an very low level."
       ]
     },
     {
@@ -1244,7 +1263,7 @@
         "\n",
         "It is very surprising that the ability to explain 1-month momentum portfolio is so strong. Using 1-month result to guide portfolio construction would seem to have a lot of randomness to it. \n",
         "\n",
-        "These results from the cross-sectional analysis seems to indicate that there is no $\\alpha$ found in across different momentum portfolios in terms of their horizon, that there desn't seem to be excess returns due to short-term, middle-term, long-term momentum strategies above what the 4-factor model can explain."
+        "These results from the cross-sectional analysis seems to indicate that there is no $\\alpha$ found in across different momentum portfolios in terms of their horizon, that there doesn't seem to be excess returns due to short-term, middle-term, long-term momentum strategies above what the 4-factor model can explain."
       ]
     }
   ]
