--- a/ProblemSet7/quantHW7.ipynb
+++ b/ProblemSet7/quantHW7.ipynb
@@ -167,7 +167,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "cOCZrgB4_rwk",
-        "outputId": "86ed25d4-4a0c-4590-a12d-87e8c6d91c07",
+        "outputId": "b6258775-2c27-4a94-f5c1-218ffb6e6a5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -248,7 +248,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5v2HPffVDQ4i"
+        "id": "5v2HPffVDQ4i",
+        "outputId": "c08cef04-b908-4360-8563-60aba9631ed7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 866
+        }
       },
       "source": [
         "market = ff_port[['Mkt-RF', 'RF']]\n",
@@ -262,10 +267,71 @@
         "    mod = sm.OLS(y_temp, x, missing = 'drop').fit()\n",
         "    beta_1.append(mod.params[1])\n",
         "\n",
-        "# beta_1"
+        "beta_1"
       ],
       "execution_count": 3,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.8853765242576596,\n",
+              " 0.6857075050412844,\n",
+              " 0.8306276013456879,\n",
+              " 0.756244276126541,\n",
+              " 0.6652264350257391,\n",
+              " 1.1745069355734894,\n",
+              " 1.3657985515942621,\n",
+              " 1.0784284717459731,\n",
+              " 0.8174566584731813,\n",
+              " 1.1074955799850152,\n",
+              " 1.1230930780579076,\n",
+              " 0.907653716454843,\n",
+              " 0.8120210831552438,\n",
+              " 1.050963949305948,\n",
+              " 1.0856886450686365,\n",
+              " 1.1352880204078994,\n",
+              " 1.1743392231936043,\n",
+              " 1.3066448550954788,\n",
+              " 1.3015598354789915,\n",
+              " 1.1140481561761564,\n",
+              " 1.2268644100703945,\n",
+              " 1.2156432345346389,\n",
+              " 1.1411541824958444,\n",
+              " 1.1388140701334155,\n",
+              " 1.1076242186494754,\n",
+              " 0.8379278421742884,\n",
+              " 0.6036122396260035,\n",
+              " 1.121487339059588,\n",
+              " 1.157450353570045,\n",
+              " 0.7968322458326408,\n",
+              " 0.5236572527347392,\n",
+              " 0.7818961506758466,\n",
+              " 1.135690214111297,\n",
+              " 1.1693624988461684,\n",
+              " 1.2150767648729168,\n",
+              " 1.6361198495135723,\n",
+              " 1.4029249319150696,\n",
+              " 1.318300861945827,\n",
+              " 0.9797786486171753,\n",
+              " 0.9665626167614908,\n",
+              " 1.0695578511767652,\n",
+              " 1.0737216893933867,\n",
+              " 0.997319774146979,\n",
+              " 1.0612123729821568,\n",
+              " 1.0662479878909688,\n",
+              " 0.9630465490352855,\n",
+              " 1.2430223994809546,\n",
+              " 1.249051637619747,\n",
+              " 1.1878694976655628]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -279,17 +345,85 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mXT67zW0dJaB"
+        "id": "mXT67zW0dJaB",
+        "outputId": "a417e651-9a80-4c04-d52a-11d6090399d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 866
+        }
       },
       "source": [
         "return_1 = []\n",
         "\n",
         "for name in industries_1.columns:\n",
         "    return_temp = industries_1[name].mean()\n",
-        "    return_1.append(return_temp)"
+        "    return_1.append(return_temp)\n",
+        "\n",
+        "return_1"
       ],
       "execution_count": 4,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.0271450617283944,\n",
+              " 1.0653240740740748,\n",
+              " 1.1640432098765425,\n",
+              " 1.1414969135802473,\n",
+              " 1.4147222222222218,\n",
+              " 0.8479166666666665,\n",
+              " 1.360648148148149,\n",
+              " 0.9410956790123445,\n",
+              " 0.9036111111111118,\n",
+              " 1.0853703703703703,\n",
+              " 1.032847222222223,\n",
+              " 1.1534722222222205,\n",
+              " 1.096820987654321,\n",
+              " 0.9562037037037042,\n",
+              " 1.0997993827160497,\n",
+              " 1.070077160493827,\n",
+              " 1.0222222222222215,\n",
+              " 1.0026234567901242,\n",
+              " 0.7357407407407404,\n",
+              " 0.7148765432098764,\n",
+              " 0.9931481481481502,\n",
+              " 1.1601543209876528,\n",
+              " 0.837685185185186,\n",
+              " 1.1913580246913587,\n",
+              " 1.0813888888888887,\n",
+              " 1.1986111111111115,\n",
+              " 0.9816820987654306,\n",
+              " 1.0957098765432103,\n",
+              " 1.06935185185185,\n",
+              " 0.9854475308641971,\n",
+              " 0.8362962962962978,\n",
+              " 0.8675308641975304,\n",
+              " 0.7061111111111112,\n",
+              " 0.9979012345679013,\n",
+              " 0.9721450617283947,\n",
+              " 0.9706410256410252,\n",
+              " 1.05013888888889,\n",
+              " 1.1014351851851856,\n",
+              " 0.9861419753086421,\n",
+              " 1.0231481481481466,\n",
+              " 0.9704166666666673,\n",
+              " 1.034398148148149,\n",
+              " 1.046404320987655,\n",
+              " 1.1959104938271594,\n",
+              " 0.9444290123456796,\n",
+              " 1.029768518518519,\n",
+              " 0.6887499999999989,\n",
+              " 1.1216203703703715,\n",
+              " 0.6398611111111109]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,7 +438,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xM0nuc26d3g6",
-        "outputId": "b33a8dea-a57d-4fc6-ccbc-2c1d7938d3e3",
+        "outputId": "e3169828-8cb9-4795-e5a2-5b97689efdbd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -382,7 +516,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "-07x19IugON9",
-        "outputId": "31f580b8-26ca-4043-cc51-0efd98cffe53",
+        "outputId": "efdccbc3-8759-4d86-bbdd-d2ae74771b50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -441,7 +575,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jgFE0H_XhlJh",
-        "outputId": "bb90d884-8df3-4d55-82fd-2eabe5feabca",
+        "outputId": "d000577e-4fe4-4f35-bb85-616a0a1d1afe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -629,7 +763,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jWncyx5C4RUW",
-        "outputId": "8330c0bd-457d-47a7-ef18-6bc1a14e20c7",
+        "outputId": "a32cc170-f138-41ed-97b3-11aca227115d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -722,7 +856,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "78P88WjxHje8",
-        "outputId": "c1b40a84-af08-4276-ef09-1591e4272f1d",
+        "outputId": "1440d9f4-ea0e-4fc8-b75a-739c22b3357d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -796,7 +930,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ggEFlM3CIMZ9",
-        "outputId": "82759b1a-edb8-491e-8830-eb4cc6f05d19",
+        "outputId": "2de69b14-14e5-4c51-8a76-f860e7d445bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
