clean up wording

--- a/ProblemSet7/quantHW7.ipynb
+++ b/ProblemSet7/quantHW7.ipynb
@@ -81,27 +81,26 @@
         "\n",
         "  Quality should have an effect on asset expected return. For example, investor should pay a price for the safety of an asset, e.g. lower expected return. On the other hand, a profitable asset might have a positive effect on expected return. In that sense, it is not obvious what such \"price\" should be, i.e. in which direction and in what magnitude.\n",
         "\n",
-        "2. Quality can be measured by profitability, investors' willingness to pay, and a stock's beta or riskiness. In general, investors are willing to pay more for stocks with higher profitability, growth and payout prospects, and a lower perceived level of risk, or beta. Lower beta stocks are less risky and are more likely to be quality stocks. \n",
+        "2. Quality can be measured by profitability, investors' willingness to pay, and a stock's beta or riskiness. Overall, investors are willing to pay more for stocks with higher profitability, growth and payout prospects, and a lower perceived level of risk, or beta. Lower beta stocks are less risky and are more likely to be quality stocks. \n",
         "\n",
         "3. \n",
         " **a. Robert Novy-Marx (The Other side of Value):** \n",
         "\n",
         " **Measuring quality:**\n",
         " \n",
-        " Gross profitability= (revenues-COGS)/ assets\n",
+        " Gross profitability= (revenues-cost or COGS)/ Assets\n",
+        " \n",
         " Novy-Marx uses gross profitability to measure quality\n",
         " \n",
-        " Gross profits/ assets= sales/assets x gross profits/ sales\n",
+        " Gross profits/ Assets= Sales/Assets * Gross Profits/ Sales\n",
         " \n",
         " Novy-Marx compared firms with high profits to firms with low profits and found that firms generating more profit earned higher returns for investors than firms generating low profits. He also found that gross profitability is a strong predictor of returns. \n",
         "\n",
-        " **Rationale for predicting returns:** \n",
+        " **Predicting returns:** \n",
         "   \n",
-        " Gross-profits-to-assets strongly predicts returns, especially controlling for book-to-market. Profitable firms have higher average returns than unprofitable firms.\n",
+        " Particuarly when controlling for book-to-market value, gross-profits-to-assets is a strong predictor of returns. Profitable firms tend to generate higher average returns than unprofitable firms.\n",
         "\n",
-        " When analyzing how much of expected returns can be explained by value, momentum, and profitability, profitability proved to be a significant driver of returns.  \n",
-        "\n",
-        " Gross profitability, as a measure of quality, is a strong predictor of the cross-section of average returns. \n",
+        " Profitability proved to be a significant driver of returns relative to momentum and value. Moreover, quality measured as profitability is an important driver of the cross-section of average returns.   \n",
         "\n",
         " **b. Frazzini and Pedersen (Betting Against Beta):** \n",
         "\n",
@@ -109,44 +108,46 @@
         "\n",
         "  Low beta stocks are a good predictor for quality, as both quality and low beta stocks tend to have low risk. Quality is therefore inversely correlated with beta: lower beta stocks can be a measure of higher quality assets. \n",
         "\n",
-        "   **Rationale for predicting returns:**\n",
+        "   **Predicting returns:**\n",
         "\n",
-        " High-quality stocks have significantly higher returns and alphas than junk stocks.\n",
+        " In actuality, high beta stocks generate lower returns than the CAPM would predict. In other words, the paper gives a conclusion counterintuitive to the CAPM. We should do the opposite of what the CAPM tells us to do: invest in low beta stocks, which generate higher returns per unit of risk than high beta stocks. \n",
         "\n",
         " **c. Asness, Frazzini, Pedersen (Quality Minus Junk)**\n",
         "\n",
         " **Measuring quality:**\n",
         "\n",
-        " Quality is defined with characteristics that should imply a higher price, all else equal: profitability, growth, safety, and payout. \n",
+        " Quality is meaured by profitability, growth, safety, and payout, all variables that should imply a higher price. \n",
         "\n",
-        " These characteristicare incorporated in Gordon’s growth model to find a stock’s price-to-book value (P/B). \n",
+        " Gordon’s Growth Model uses these variables to find a stock’s price-to-book value (P/B). \n",
         "\n",
-        " P/B = (profit/B x dividend/profit)/(required return – growth)\n",
+        " e.g.: P/B = (profit/B * dividend/profit OR payout ratio)/(required return – growth)\n",
         "\n",
-        " can be rewritten as: \n",
-        "P/B = (profitability x payout ratio)/(required return – growth)\n",
+        " Profitability: profits per unit of book value\n",
+        " \n",
+        " Growth is prior five-year growth\n",
         "\n",
-        " Profitability is captured in profits per unit of book value. Growth is prior five-year growth in each of the profitability measures. Safety is captured with required return, as investors should pay a higher price for a stock with a lower required return. Payout is captured with the fraction of profits paid out to shareholders. \n",
+        " Safety is caputred through required return, because investors will pay more for a stock with a lower required return.\n",
+        " \n",
+        " Payout is captured with the fraction of profits paid out to shareholders. \n",
         "\n",
-        " Each variable is converted into a ‘z-score’ and standardized. \n",
-        "The four measures are then combined into a quality score: Quality = z(Profitability + Growth + Safety + Payout) \n",
+        " Each variable is standardized into a z-score and combined into a quality score: Quality = z(Profitability + Growth + Safety + Payout) \n",
         "\n",
-        "  **Rationale for predicting returns:**\n",
+        "  **Predicting returns:**\n",
         "\n",
-        " High-quality stocks have significantly higher returns and alphas than junk stocks.\n",
+        " High-quality stocks have significantly higher returns than junk stocks.\n",
         "\n",
         " **d. Fama, French (A five-factor asset pricing model)**\n",
         " \n",
         " **Measuring quality:**\n",
         " \n",
-        " Fama and French use profitability as a measure of quality in their five-factor asset pricing model. They capture profitability with RMW – \"robust minus weak profitability\", or a portfolio that goes long profitable firms and short unprofitable firms. \n",
+        " Profitability is a measure of quality in the Fama & French five-factor asset pricing model. Portfolios that goes long profitable firms and short unprofitable firms are optimal. The paper uses the concept RMW:\"robust minus weak profitability\".  \n",
         "\n",
-        "   **Rationale for predicting returns:**\n",
+        "   **Predicting returns:**\n",
         "\n",
-        " Fama and French (2018) found that average stock returns increase with profitability. Thus, profitability as a measure of quality can predict returns. \n",
+        " Average stock returns are postiveily correlated with profitability. In other words, when measured as quality, profitability can have strong predictive power when explaining returns. \n",
         "\n",
         "*******\n",
-        " The Novy-Marx measure seems the most intuitive and has the simples. Gross profitability and the equation used are straight forward and not overly complicated. Profitability is for the most part directly connected to quality and to risk-adjusted returns so the Novy-Marx equation is easy to follow. It also is intuitive that higher beta stocks would be an indicator of lower quality. And though the Fama, French five-factor model includes profitability it does not focus on quality compared to other measures. \n",
+        " The Novy-Marx measure and equation seems the most intuitive: profitability is linked to quality and to risk-adjusted returns. It also is intuitive that higher beta stocks would be an indicator of lower quality. And though the Fama & French model includes profitability, they does not focus on quality more than the other variables discussed. \n",
         "\n",
         "*******\n",
         "**Is your explanation consistent or inconsistent with an efficient market?**\n",
@@ -167,7 +168,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "cOCZrgB4_rwk",
-        "outputId": "b6258775-2c27-4a94-f5c1-218ffb6e6a5c",
+        "outputId": "fdf3aaf8-261b-4c1b-bebd-a93f5b2351e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -180,7 +181,7 @@
         "from scipy import stats\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +224,7 @@
         "ff_port = ff_port.loc[ff_port.index.dropna()]\n",
         "ff_port = ff_port.drop(\"Unnamed: 0\", axis = 1)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +250,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "5v2HPffVDQ4i",
-        "outputId": "c08cef04-b908-4360-8563-60aba9631ed7",
+        "outputId": "069cf4a5-5910-4864-c34e-2dc34a6cfe50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 866
@@ -269,7 +270,7 @@
         "\n",
         "beta_1"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +347,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "mXT67zW0dJaB",
-        "outputId": "a417e651-9a80-4c04-d52a-11d6090399d7",
+        "outputId": "740b5a5b-d862-424c-bce1-99ea61109c6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 866
@@ -361,7 +362,7 @@
         "\n",
         "return_1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +439,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xM0nuc26d3g6",
-        "outputId": "e3169828-8cb9-4795-e5a2-5b97689efdbd",
+        "outputId": "09dc9861-be38-4b2f-8184-e33304e67ecd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -453,7 +454,7 @@
         "plt.xlim(0, 2)\n",
         "plt.ylim(0, 2)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,7 +517,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "-07x19IugON9",
-        "outputId": "efdccbc3-8759-4d86-bbdd-d2ae74771b50",
+        "outputId": "a72b035f-1c52-4515-eae9-cdb391b0a43c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -532,7 +533,7 @@
         "plt.xlim(0, 2)\n",
         "plt.ylim(0, 2)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -575,7 +576,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jgFE0H_XhlJh",
-        "outputId": "d000577e-4fe4-4f35-bb85-616a0a1d1afe",
+        "outputId": "b6dde0d5-b5e2-4180-fe5f-3274b959b6a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -592,7 +593,7 @@
         "plt.xlim(0, 2)\n",
         "plt.ylim(0, 2)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +730,7 @@
         "  beta_umd.append(mod2.params[3])\n",
         "  beta_bab.append(mod2.params[4])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -747,7 +748,7 @@
         "\n",
         "mod3 = sm.OLS(avg_return, x).fit()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,7 +764,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jWncyx5C4RUW",
-        "outputId": "a32cc170-f138-41ed-97b3-11aca227115d",
+        "outputId": "d4a6f574-76d4-49eb-ecd8-2c33773275a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -780,7 +781,7 @@
         "      \"gamma_hml: \", round(mod3.pvalues[2],2), \"gamma_umd: \", round(mod3.pvalues[3],2), \"gamma_bab\", round(mod3.pvalues[4],2))\n",
         "print(\"r-squared->\", round(mod3.rsquared,2))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,7 +857,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "78P88WjxHje8",
-        "outputId": "1440d9f4-ea0e-4fc8-b75a-739c22b3357d",
+        "outputId": "07540568-04d1-4116-e06d-1b74147d0bcd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -902,7 +903,7 @@
         "      \"gamma_hml: \", round(mod4.pvalues[2],2), \"gamma_umd: \", round(mod4.pvalues[3],2), \"gamma_qmj\", round(mod4.pvalues[4],2))\n",
         "print(\"r-squared->\", round(mod4.rsquared,2))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,7 +931,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ggEFlM3CIMZ9",
-        "outputId": "2de69b14-14e5-4c51-8a76-f860e7d445bf",
+        "outputId": "cfa7f8ac-b246-4ada-fca6-c5c25f1ba0bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -975,7 +976,7 @@
         "      \"gamma_hml: \", round(mod5.pvalues[2],2), \"gamma_umd: \", round(mod5.pvalues[3],2), \"gamma_rmw\", round(mod5.pvalues[4],2))\n",
         "print(\"r-squared->\", round(mod5.rsquared,2))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
